libgfx = declare_dependency(
	link_with : library('gfx',
		'drivers/input/ft6x06_touch.cpp',
		'drivers/disp/dsi_fb.cpp',
		'src/gdi.cpp',
		'src/input.cpp',
		'src/gui/choice_menu.cpp',
		'src/gui/frame.cpp',
		'src/gui/button.cpp',
		'src/gui/window.cpp',
		'src/gui/waterfall.cpp',
		'src/gui/seekbar.cpp',
		'src/gui/timer.cpp',
		'src/gui/multiview.cpp',
		'src/gui/label.cpp',
		'src/gui/selectable_widget.cpp',
		'src/gui/battery_icon.cpp',
		'src/gui/editbox.cpp',
		'src/gui/icon.cpp',
		'src/fonts/small.cpp',
		'src/fonts/default.cpp',
		cpp_args : '-DCONFIG_ISIX_USE_TIMERS=1',
		include_directories : 'include',
		dependencies : libperiph,
	),
	include_directories : 'include',
	dependencies : libperiph,
)