_lwip = 'lwip-1.4.1/src'
_includes = include_directories( _lwip/'include', _lwip/'include/ipv4', 'port/include')
_deps = [libfoundation, libisix]

_flags = [
	# '-DISIX_TCPIPLIB_CHECKSUM_BY_HARDWARE=1',
	# '-DISIX_TCPIPLIB_ETHERNET=1',
	'-DLWIP_IPV6',
	'-Wno-implicit-fallthrough',
	'-Wno-nonnull',
	'-Wno-array-bounds',
	'-Wno-restrict',
	'-Wno-stringop-overflow',
]

libtcpip = declare_dependency(
	link_with : library('tcpip',
		'port/sio_ppp.cpp',
		'port/sys_arch.c',
		_lwip/'core/memp.c',
		_lwip/'core/dhcp.c',
		_lwip/'core/sys.c',
		_lwip/'core/snmp/asn1_enc.c',
		_lwip/'core/snmp/msg_out.c',
		_lwip/'core/snmp/asn1_dec.c',
		_lwip/'core/snmp/mib2.c',
		_lwip/'core/snmp/msg_in.c',
		_lwip/'core/snmp/mib_structs.c',
		_lwip/'core/raw.c',
		_lwip/'core/tcp_out.c',
		_lwip/'core/dns.c',
		_lwip/'core/init.c',
		_lwip/'core/mem.c',
		_lwip/'core/def.c',
		_lwip/'core/udp.c',
		_lwip/'core/stats.c',
		_lwip/'core/tcp_in.c',
		_lwip/'core/ipv4/ip_addr.c',
		_lwip/'core/ipv4/autoip.c',
		_lwip/'core/ipv4/inet_chksum.c',
		_lwip/'core/ipv4/ip_frag.c',
		_lwip/'core/ipv4/ip.c',
		_lwip/'core/ipv4/igmp.c',
		_lwip/'core/ipv4/icmp.c',
		_lwip/'core/ipv4/inet.c',
		_lwip/'core/netif.c',
		_lwip/'core/tcp.c',
		_lwip/'core/timers.c',
		_lwip/'core/pbuf.c',
		_lwip/'netif/slipif.c',
		_lwip/'netif/ppp/vj.c',
		_lwip/'netif/ppp/auth.c',
		_lwip/'netif/ppp/chpms.c',
		_lwip/'netif/ppp/lcp.c',
		_lwip/'netif/ppp/pap.c',
		_lwip/'netif/ppp/chap.c',
		_lwip/'netif/ppp/magic.c',
		_lwip/'netif/ppp/md5.c',
		_lwip/'netif/ppp/fsm.c',
		_lwip/'netif/ppp/ppp_oe.c',
		_lwip/'netif/ppp/ppp.c',
		_lwip/'netif/ppp/ipcp.c',
		_lwip/'netif/ppp/randm.c',
		_lwip/'netif/ethernetif.c',
		_lwip/'netif/etharp.c',
		_lwip/'api/sockets.c',
		_lwip/'api/netdb.c',
		_lwip/'api/tcpip.c',
		_lwip/'api/err.c',
		_lwip/'api/netifapi.c',
		_lwip/'api/api_lib.c',
		_lwip/'api/api_msg.c',
		_lwip/'api/netbuf.c',
		c_args : _flags,
		cpp_args : _flags,
		include_directories : _includes,
		dependencies : _deps,
	),
	include_directories : _includes,
	dependencies : _deps,
)