_mbedtls = 'mbedtls-2.1.1'
_include = include_directories(_mbedtls/'include')

_mbedtls_lib = _mbedtls/'library'
libtls = declare_dependency(
	link_with : library('tls',
		_mbedtls_lib/'aes.c',
		_mbedtls_lib/'aesni.c',
		_mbedtls_lib/'arc4.c',
		_mbedtls_lib/'asn1parse.c',
		_mbedtls_lib/'asn1write.c',
		_mbedtls_lib/'base64.c',
		_mbedtls_lib/'bignum.c',
		_mbedtls_lib/'blowfish.c',
		_mbedtls_lib/'camellia.c',
		_mbedtls_lib/'ccm.c',
		_mbedtls_lib/'certs.c',
		_mbedtls_lib/'cipher.c',
		_mbedtls_lib/'cipher_wrap.c',
		_mbedtls_lib/'ctr_drbg.c',
		_mbedtls_lib/'debug.c',
		_mbedtls_lib/'des.c',
		_mbedtls_lib/'dhm.c',
		_mbedtls_lib/'ecdh.c',
		_mbedtls_lib/'ecdsa.c',
		_mbedtls_lib/'ecp.c',
		_mbedtls_lib/'ecp_curves.c',
		_mbedtls_lib/'entropy.c',
		_mbedtls_lib/'entropy_poll.c',
		_mbedtls_lib/'error.c',
		_mbedtls_lib/'gcm.c',
		_mbedtls_lib/'havege.c',
		_mbedtls_lib/'hmac_drbg.c',
		_mbedtls_lib/'md.c',
		_mbedtls_lib/'md2.c',
		_mbedtls_lib/'md4.c',
		_mbedtls_lib/'md5.c',
		_mbedtls_lib/'md_wrap.c',
		_mbedtls_lib/'memory_buffer_alloc.c',
		_mbedtls_lib/'net.c',
		_mbedtls_lib/'oid.c',
		_mbedtls_lib/'padlock.c',
		_mbedtls_lib/'pem.c',
		_mbedtls_lib/'pk.c',
		_mbedtls_lib/'pk_wrap.c',
		_mbedtls_lib/'pkcs11.c',
		_mbedtls_lib/'pkcs12.c',
		_mbedtls_lib/'pkcs5.c',
		_mbedtls_lib/'pkparse.c',
		_mbedtls_lib/'pkwrite.c',
		_mbedtls_lib/'platform.c',
		_mbedtls_lib/'ripemd160.c',
		_mbedtls_lib/'rsa.c',
		_mbedtls_lib/'sha1.c',
		_mbedtls_lib/'sha256.c',
		_mbedtls_lib/'sha512.c',
		_mbedtls_lib/'ssl_cache.c',
		_mbedtls_lib/'ssl_ciphersuites.c',
		_mbedtls_lib/'ssl_cli.c',
		_mbedtls_lib/'ssl_cookie.c',
		_mbedtls_lib/'ssl_srv.c',
		_mbedtls_lib/'ssl_ticket.c',
		_mbedtls_lib/'ssl_tls.c',
		_mbedtls_lib/'threading.c',
		_mbedtls_lib/'timing.c',
		_mbedtls_lib/'version.c',
		_mbedtls_lib/'version_features.c',
		_mbedtls_lib/'x509.c',
		_mbedtls_lib/'x509_create.c',
		_mbedtls_lib/'x509_crl.c',
		_mbedtls_lib/'x509_crt.c',
		_mbedtls_lib/'x509_csr.c',
		_mbedtls_lib/'x509write_crt.c',
		_mbedtls_lib/'x509write_csr.c',
		_mbedtls_lib/'xtea.c',
		c_args : '-Wno-array-parameter',
		include_directories : _include,
		dependencies : libtcpip,
	),
	include_directories : _include,
	dependencies : libtcpip,
)