executable('isixtests',
	'01_basic_primitives.cpp',
	'02_mempool.cpp',
	'03_mutex.cpp',
	'04_sched_suspend.cpp',
	'05_semaphores.cpp',
	'06_tasks.cpp',
	'07_vtimer.cpp',
	'08_fifo.cpp',
	'09_events.cpp',
	'unittests_entry.cpp',
	'utils/board_boot.cpp',
	'utils/dts.cpp',
	'utils/event_groups_demo.c',
	'utils/sp_fpu_test_and_set.S',
	'utils/task_test_helper.c',
	'utils/timer_interrupt.cpp',
	override_options : _test_option_overrides,
	include_directories : ['include', 'utils'],
	dependencies : [
		libperiph,
		_lest,
		libisix,
	],
)